--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,313 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  list-style: none;
+  text-decoration: none;
+  color: var(--white);
+  font-family: var(--main-font);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --white: #e5e5e5;
+  --black: #0a100d;
+  --red: #a22c29;
+  --lime: #a2d21e;
+  --blue: #1c2733;
+  --p-lr: 5%;
+  --main-font: "Poppins", sans-serif;
+  --transition: 0.2s ease;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  background-color: var(--black);
+}
+body,
+html {
+  font-size: 100%;
+  scroll-behavior: smooth;
+}
+p {
+  line-height: 1.5;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Button Start*/
+.btn {
+  padding: 0.5rem 1rem;
+  background-color: var(--red);
+  border-radius: 3rem;
+  cursor: pointer;
+  transition: 0.2s ease;
+}
+.btn:hover {
+  background-color: #77201f;
+}
+/* Button End*/
+
+/* Navbar Start */
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: var(--red);
+  padding: 1rem var(--p-lr);
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
+
+.link-container {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  text-transform: capitalize;
+}
+.link-container li {
+  position: relative;
+}
+.link-container li::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 10%;
+  background-color: var(--lime);
+  transition: var(--transition);
+}
+
+.link-container li:hover::before {
+  width: 100%;
+}
+
+/* Navbar End */
+
+/* Inputbox Start */
+.input-box {
+  width: 80%;
+  margin: 5rem auto 2rem;
+}
+.input-box h1 {
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+.input-box textarea {
+  width: 100%;
+  padding: 1rem;
+  font-size: 1rem;
+  background-color: var(--blue);
+  resize: none;
+}
+.input-box .btns {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 1rem 0;
+  flex-wrap: wrap;
+}
+.input-box .btns section {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.btns,
+.btns section {
+  gap: 1rem;
+}
+
+.input-box .summary {
+  text-transform: capitalize;
+}
+.input-box .summary p {
+  font-weight: 300;
+}
+.input-box .summary p:nth-child(2),
+.input-box .summary p:nth-child(3) {
+  margin: 0.1rem 0;
+}
+
+/* Inputbox End */
+
+/* Steps Start */
+
+.steps {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 5rem 0;
+}
+.steps > h1 {
+  margin: 1rem 0;
+  text-transform: uppercase;
+}
+.steps section {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 1rem;
+  width: 95%;
+}
+.steps section div {
+  width: 30%;
+  border: 1px solid var(--red);
+  padding: 2rem 1rem;
+}
+.steps div p {
+  margin: 2rem 0;
 }
 
-.App-link {
-  color: #61dafb;
+.steps div span {
+  padding: 0.8rem 1.5rem;
+  border-radius: 50%;
+  font-size: 1.4rem;
+  font-weight: bold;
+  border: 2px solid var(--red);
+  transition: 0.2s ease;
+}
+.steps div:hover span {
+  background-color: var(--red);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Steps End */
+
+/* About Start */
+
+.about {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5rem auto;
+  gap: 1rem;
+}
+.about > p {
+  width: 40%;
+  text-align: center;
+}
+.about h1 {
+  text-transform: uppercase;
+}
+.about > img {
+  width: 20%;
+  border-radius: 50%;
+  margin-inline: auto;
+}
+.about section {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 0;
+}
+.about section div {
+  width: 90%;
+  text-align: justify;
+  padding: 1rem;
+}
+.about section .para {
+  border-left: 1px solid var(--red);
+}
+
+.about section .edu {
+  align-self: flex-end;
+  border-right: 1px solid var(--red);
+}
+.about section > div {
+  display: flex;
+  align-items: center;
+}
+.about section > div img {
+  width: 20%;
+}
+
+/* About End */
+
+/* Footer Start */
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5rem 0 2rem;
+  gap: 1rem;
+}
+footer ul {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  font-size: 2rem;
+}
+
+/* Footer End */
+
+@media screen and (max-width: 1204px) {
+  .steps section div {
+    width: 47%;
   }
-  to {
-    transform: rotate(360deg);
+  .about section div {
+    width: 100%;
+  }
+  .about section > div {
+    flex-direction: column;
+  }
+  .about section > div:nth-child(2) {
+    flex-direction: column-reverse;
+  }
+  .about section .para,
+  .about section .edu {
+    border: none;
+    width: 100%;
+    text-align: left;
+    padding: 0;
+  }
+  .about section .para p,
+  .about section .edu p {
+    text-align: left;
+  }
+  .about section > div img {
+    width: 50%;
+  }
+}
+@media screen and (max-width: 728px) {
+  .input-box {
+    width: 95%;
+  }
+  .steps section div {
+    width: 100%;
+  }
+
+  .menu {
+    width: 3rem;
+    height: 2px;
+    background-color: var(--black);
+    box-shadow: 3px 0.5rem 0 0 var(--black);
+  }
+  .link-container {
+    flex-direction: column;
+    align-items: flex-start;
+    position: absolute;
+    top: 4rem;
+    right: 0.4rem;
+    background-color: var(--red);
+    padding: 2rem;
+    gap: 1rem;
+    display: none;
+  }
+  .about > p {
+    width: 100%;
+    text-align: left;
+  }
+}
+@media screen and (max-width: 375px) {
+  .steps section div {
+    width: 100%;
+  }
+  .about section .para p,
+  .about section .edu p {
+    font-size: 0.8rem;
   }
 }
