--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,8 @@ p {
   font-size: 1rem;
   background-color: var(--blue);
   resize: none;
+  min-height: 4rem;
+  max-height: 40vh;
 }
 .input-box .btns {
   display: flex;
